[FIX] survey: fix display issues
Fix 2 display issues that happens in elearning:

- A horizontal scrollbar appears on the form view when clicking on
"Add content" in the course back-end form.

This happens because a padding end of 8px is added to the formsheet
when the screen is < 1920px and the chatter is present aside.
The padding is added to reduce the spacing between the form and the chatter.
However when the form is in a dialog it is limited to the dialog width and
adding this padding is making it overflow.
As there is no need for this extra spacing when the form is in a dialog
(because there is no chatter), removing this extra padding.
The extra padding css rule needs to be preserved so that it impacts the displayed
form view in the background. The new css rule impact the form displayed in
the modal on top of it.

- Fix the course title which is truncated after a single letter in the website
course page breadcrumbs.

Adding the w-100 class on the breadcrumbs so that it takes all the available
horizontal space. The w-25 class on the course title item will then make it
take up to 1/4 of the horizontal space before being truncated.

related PR: odoo/odoo#149832

Task-3876972

--- a/addons/mail/static/src/chatter/web/form_renderer.scss
+++ b/addons/mail/static/src/chatter/web/form_renderer.scss
@@ -35,6 +35,10 @@
         --formView-sheetBg-padding-right: #{map-get($spacers, 2)};
     }
 }
+// Prevent reducing the spacing for form in dialog
+div.modal-dialog .o_form_sheet_bg {
+    padding-right: var(--formView-sheetBg-padding-x) !important;
+}
 
 // ------------------------------------------------------------------
 // Style
